umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@cdk_sgroup-sru-bad-def.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 14, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 14, col 0"
extended_molecule:
  success: false
  error:
    error_type: UndefinedSGroup
    message: "Undefined S-group 0: connectivity"
extended_molecule_lenient:
  success: false
  error:
    error_type: UndefinedSGroup
    message: "Undefined S-group 0: connectivity"
