umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@cdk_sgroup-sru-bracketstyles.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 31"
extended_molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 15, col 0"
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 15, col 0"
